Update app, index, home

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -20,7 +20,7 @@
     <div align="center">
 
     <div class="card" style="width: 18rem;">
-    <img src= "<%= arr2[i] %>" class="card-img-top" alt="Poster not available">
+    <img src= "<%= arr2[i] %>" class="card-img-top">
     <div class="card-body">
     <h5 class="card-title"><%= arr1[i] %></h5>
     <p class="card-text">An interesting <%= arr3[i] %> with an awesome storyline. A must watch and highly recommended by various users.</p>
